--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     </script>
 </head>
 <body>
-    <img src="totvsgif.png" alt="PNG" onclick="redirecionarParaOutroSite()" style="cursor: pointer;">
+    <img src="totvs.gif" alt="GIF" onclick="redirecionarParaOutroSite()" style="cursor: pointer;">
 </body>
 </html>
